add: box-sizing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
+  <div class="page-wrapper">
+    <header class="header">
+      <span class="hello">Hey, Harry 👋</span>
+      <p class="hello-text">Do you need a website?
+        <br>I can make design, functionality
+        <br>and other joys of life.</p>
+    </header>
+  </div>
   
   <script src="js/main.js"></script>
 </body>
