--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
       <span class="hello">Hey, Harry 👋</span>
       <p class="hello-text">Do you need a website?
         <br>I can make design, functionality
-        <br>and other joys of life.</p>
+        <br>and other joys of life.
+      </p>
     </header>
+    <div class="container">
+      <div class="user">
+        <img width="100" height="100" src="img/avatar.png" alt="Nasruddi Dedishov" class="user-avatar"> 
+        <h1 class="user-name">Nasruddi Dedishov</h1>
+        <p class="user-description">Website developer</p>
+      </div>
+      <!-- /.user -->
+    </div>
+    <!-- /.container -->
   </div>
   
   <script src="js/main.js"></script>
