--- a/index.html
+++ b/index.html
@@ -22,11 +22,46 @@
     </header>
     <div class="container">
       <div class="user">
-        <img width="100" height="100" src="img/avatar.png" alt="Nasruddi Dedishov" class="user-avatar"> 
+        <img width="100" height="100" src="img/avatar.png" alt="Nasruddi Dedishov" class="user-avatar">
         <h1 class="user-name">Nasruddi Dedishov</h1>
         <p class="user-description">Website developer</p>
       </div>
       <!-- /.user -->
+      <div class="contacts">
+
+          <a href="https://github.com/dedishov" class="button github">
+          <img src="img/icons/github.svg" alt="gh" class="button-icon">
+          <span class="button-text">Github profile</span>
+          </a>
+
+        <div class="buttons">
+
+          <a href="https://t.me/dedishov" class="button telegram">
+            <img src="img/icons/tg.svg" alt="tg" class="button-icon">
+          </a>
+
+          <a href="https://wa.me/+79891712000" class="button whatsapp">
+            <img src="img/icons/WhatsApp.svg" alt="wa" class="button-icon">
+          </a>
+
+          <a href="https://instagram.com/dedishov" class="button instagram">
+            <img src="img/icons/inst.svg" alt="ig" class="button-icon">
+          </a>
+
+          <a href="https://www.facebook.com/profile.php?id=100008674145678&mibextid=LQQJ4d" class="button facebook">
+            <img src="img/icons/fb.svg" alt="fb" class="button-icon">
+          </a>
+
+          <a href="https://twitter.com/dedishov" class="button twitter">
+            <img src="img/icons/twitter.svg" alt="tw" class="button-icon">
+          </a>
+
+        </div>
+        <!-- /.buttons -->
+        
+
+      </div>
+      <!-- /.contacts -->
     </div>
     <!-- /.container -->
   </div>
